# AutoInitialize

./: PARAM.md  README.md  test_tf_conversion.cpp  test_tf_conversion.py
btc_init_localizer/: CMakeLists.txt  package.xml
btc_init_localizer/config/: btc_builder.yaml  btc_initializer.yaml
btc_init_localizer/include/btc_init_localizer/: BTC.h
btc_init_localizer/launch/: btc_map_builder.launch.py  btc_ndt_initializer.launch.py
btc_init_localizer/src/: BTC.cpp  btc_map_builder_node.cpp  btc_ndt_initializer_node.cpp
scancontext_init_localizer/: CMakeLists.txt  package.xml
scancontext_init_localizer/config/: sc_builder.yaml
scancontext_init_localizer/launch/: sc_map_builder.launch.py
scancontext_init_localizer/src/: sc_map_builder_node.cpp  sc_ndt_initializer_node.cpp
